<resources>
    <string name="app_name">Journal and Something Else</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_journal">Journal</string>
    <string name="menu_breathing_exercise">Breathing Exercise</string>
    <string name="menu_questionnaire">Questionnaire</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_log_out">Log out</string>
    <string name="blas">blablablablablablablablablablablablablablablablablablablablablablablabla</string>
    <string name="context_delete">Delete</string>
    <string name="date_and_author">Date and Author</string>
    <string name="write_comment">Write Comment</string>
    <string name="add">Add</string>
    <string name="breathe_exercise_time">Time in minute(s)</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="_2_minutes_btn">2 Minutes</string>
    <string name="_10_minutes_btn">10 Minutes</string>
    <string name="_20_minutes_btn">20 Minutes</string>
</resources>