<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PostDetailActivity">

    <ImageView
        android:id="@+id/post_detail_img"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/post_detal_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="4sp"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_img" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#2e2e2e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_detal_title" />

    <TextView
        android:id="@+id/post_detail_date_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/date_and_author"
        app:layout_constraintEnd_toStartOf="@+id/post_detail_author_photo"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/post_detail_author_photo"
        android:layout_width="32dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_detail_date_name"
        app:layout_constraintEnd_toEndOf="@+id/post_detal_title"
        app:layout_constraintTop_toTopOf="@+id/post_detail_date_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/post_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/blas"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/post_detail_author_photo"
        app:layout_constraintStart_toStartOf="@+id/post_detail_date_name"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_date_name" />

    <ImageView
        android:id="@+id/post_detail_currentuser_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/post_detail_comment_edittext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_button_style_rounded"
        android:ems="10"
        android:hint="@string/write_comment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/post_detail_currentuser_photo"
        app:layout_constraintEnd_toStartOf="@+id/post_detail_add_comment_button"
        app:layout_constraintStart_toEndOf="@+id/post_detail_currentuser_photo"
        app:layout_constraintTop_toTopOf="@+id/post_detail_currentuser_photo" />

    <Button
        android:id="@+id/post_detail_add_comment_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_detail_comment_edittext" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_detail_comment_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/post_detail_currentuser_photo"
        app:layout_constraintEnd_toEndOf="@+id/post_detail_description"
        app:layout_constraintStart_toStartOf="@+id/post_detail_description"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_description" />
</androidx.constraintlayout.widget.ConstraintLayout>